支持lamdba；录音后自动滑动到最下面。解决#8；但是#2的问题又暴露出来了。

--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -11,7 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:divider="#0000"
-        android:listSelector="#0000"></ListView>
+        android:listSelector="#0000"/>
 
     <com.gaoyuan.weixinrecord.manager.AudioRecordButton
         android:id="@+id/em_tv_btn"
